# micro-optimize-algo

./: .gitignore  BENCHMARKING.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
scripts/: extract_asm.sh
src/: lib.rs  registry.rs  tui.rs
src/control_flow/: mod.rs
src/control_flow/call_vs_branch/: README.md  mod.rs
src/control_flow/call_vs_branch/bench/: mod.rs
src/control_flow/call_vs_branch/code/: mod.rs  original.rs  x86_64_asm.rs
src/control_flow/call_vs_branch/test/: mod.rs
src/control_flow/elseif_vs_jumptable/: README.md  mod.rs
src/control_flow/elseif_vs_jumptable/bench/: mod.rs
src/control_flow/elseif_vs_jumptable/code/: c_impl.rs  c_original.c  mod.rs  original.rs  x86_64_asm.rs
src/control_flow/elseif_vs_jumptable/test/: mod.rs
src/math/: mod.rs
src/math/dot_product/: README.md  mod.rs
src/math/dot_product/bench/: mod.rs
src/math/dot_product/code/: c_impl.rs  c_original.c  c_scalar_opt.c  c_x86_64_sse2.c  mod.rs  original.rs  scalar_opt.rs  x86_64_avx2.rs  x86_64_sse2.rs
src/math/dot_product/test/: mod.rs
src/random/: mod.rs
src/random/xoroshiro/: mod.rs
src/random/xoroshiro/bench/: mod.rs
src/random/xoroshiro/code/: c_impl.rs  c_original.c  mod.rs  original.rs  x86_64_asm.rs
src/random/xoroshiro/test/: mod.rs
src/utils/: bench.rs  cpu_affinity.rs  cycles.rs  mod.rs  runner.rs  timer.rs  tui.rs
