[package]
name = "micro-optimize-algo"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A collection of micro-optimized algorithms"
license = "MIT"
readme = "README.md"
repository = "https://github.com/your-username/micro-optimize-algo"

[lib]
path = "src/lib.rs"

[[bin]]
name = "micro-algo"
path = "src/bin/all.rs"

[dependencies]
rand = "0.8"
libc = "0.2"
terminal_size = "0.3"

[build-dependencies]
cc = "1.0"
glob = "0.3"



[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[features]
default = []
avx2 = []
c_impl = []
cpu_cycles = []
